# Core_Invoice

./: .gitignore  BUILD_INSTRUCTIONS.md  Core-Invoice Build Prompt.md  Dockerfile  build-desktop-package.sh  build-desktop.sh  build-final.sh  build-portable.sh  build-windows.ps1  electron-builder.json  package-lock.json  package.json  railway.json  start-dev.sh
client/: index.html  package.json  vite.config.ts
client/public/vendy/: Vendy - All 8 Animated States.html  preview.html
client/src/: App.tsx  main.tsx
client/src/api/: client.ts
client/src/components/: ChatWidget.tsx  Layout.tsx  NotificationBell.tsx
client/src/context/: AuthContext.tsx
client/src/pages/: AdminPage.tsx  BillDetailPage.tsx  BillingWizardPage.tsx  CompanyInfoPage.tsx  DashboardPage.tsx  DieselLogPage.tsx  DocumentsPage.tsx  LoginPage.tsx  POReaderPage.tsx  ProfilePage.tsx  RegisterPage.tsx  RegisterPage.tsx:Zone.Identifier  SplashScreen.tsx  TaxInvoicePage.tsx  VendorDetailPage.tsx  VendorsPage.tsx
client/src/styles/: global.css
electron/: README.md  main.js  package.json
mcp-server/: extract_po.py  pyproject.toml  server.py  test_read.py
server/: .env.example  .env.production  migrate-data.ts  package.json  tsconfig.json  vitest.config.ts
server/data/: core-invoice.db  jan_mar_2026_bills.csv
server/src/: index.ts
server/src/database/: connection.ts  knexfile.ts
server/src/middleware/: authMiddleware.ts
server/src/routes/: authRoutes.ts  billingRoutes.ts  chatbotRoutes.ts  companyRoutes.ts  dashboardRoutes.ts  dieselRoutes.ts  documentRoutes.ts  notificationRoutes.ts  (+4 more)
(+19 files in other folders)
